--- a/zoe-site.toml
+++ b/zoe-site.toml
@@ -83,7 +83,7 @@ theme = "preferred_color_scheme"
 
 [gitContent]
 name = "me"
-remote = "https://github.com/jiusanzhou/me.git"
+remote = "https://jiusanzhou:${process.env.GITHUB_TOKEN}@github.com/jiusanzhou/me.git"
 local = "/tmp/repo-me"
 patterns = [ "📖posts/**" ]
 
