--- a/zoe-site.toml
+++ b/zoe-site.toml
@@ -7,7 +7,7 @@ description = "我将成为我的墓志铭"
 # - remote url
 # so, we must use absolute path at here
 # logo = "https://github.com/jiusanzhou.png"
-logo = "${__dirname}/images/avatar-v2.png"
+logo = "${__dirname}/images/avatar-v2.jpg"
 
 version = "beta"
 
