:balloon: change the date format to yyyy-mm-dd

--- a/zoe-site.toml
+++ b/zoe-site.toml
@@ -13,6 +13,8 @@ version = "beta"
 
 primaryColor = "gray"
 
+dateFormat = "YYYY-MM-DD"
+
 zoePlugins = [
   "src/plugins/repo-project",
   "src/plugins/blog-post",
