update the github id

--- a/zoe-site.toml
+++ b/zoe-site.toml
@@ -64,7 +64,7 @@ href = "/rss.xml"
 
 [socials]
 email = "hi@zoe.im"
-github = "zoeim"
+github = "jiusanzhou"
 twitter = "jiusanzhou"
 facebook = "jiusanzhou"
 telegram = "jiusanzhou"
